# slide-deck-ai

./: .codecov.yml  .coveragerc  .env.example  .gitattributes  .gitignore  .readthedocs.yaml  LICENSE  LITELLM_MIGRATION_SUMMARY.md  MANIFEST.in  README.md  app.py  chat_app.py  clarifai_grpc_helper.py  global_config.py  legacy_app.py  llm_helper.py  pptx_helper.py  pyproject.toml  requirements.txt  strings.json
.github/: copilot-instructions.md
.github/workflows/: codeql.yml  pr-workflow.yml  publish-to-pypi.yml
.streamlit/: config.toml
docs/: api.rst  conf.py  index.rst  installation.md  llm_flow.md  models.md  requirements.txt  usage.md
docs/_templates/: module.rst
examples/: example_01.json  example_01_structured_output.json  example_02.json  example_02_structured_output.json  example_03.json  example_04.json
file_embeddings/: embeddings.npy  icons.npy
helpers/: chat_helper.py  file_manager.py  icons_embeddings.py  image_search.py  llm_helper.py  pptx_helper.py  text_helper.py
icons/: svg_repo.txt
langchain_templates/: template_07.txt  template_combined.txt  template_combined_chat_history.txt  text_to_json_template.txt  text_to_json_template_02.txt
langchain_templates/chat_prompts/: initial_template.txt  initial_template_v2_steps.txt  (+6 more)
pptx_templates/: Blank.pptx  Ion_Boardroom.pptx  Minimalist_sales_pitch.pptx  Urban_monochrome.pptx
prompts/: initial_template_v4_two_cols_img.txt  refinement_template_v4_two_cols_img.txt
slides_for_this_project_by_this_project/: 515fc765-4aaf-4485-a421-551363710c03_1693157001.5142696.pptx  prompt_on_this_idea.txt
(+26 files in other folders)
